fix pointer-events on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,6 +103,10 @@ body {
   text-align: center;
 }
 
+.stats {
+  pointer-events: none;
+}
+
 .stat {
   padding: 0 5px;
   display: flex;
